// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithButton /> by default matches with snapshot 1`] = `
<div
  className="sc-htpNat ePpdXQ"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput sc-bxivhb wFwRO k-Form-TextInput--andromeda k-Form-TextInput--regular"
    disabled={false}
    name="text"
  />
  <button
    className="sc-ifAKCX gmGUyD"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with buttonProps prop matches with snapshot 1`] = `
<div
  className="sc-htpNat ePpdXQ"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput sc-bxivhb wFwRO k-Form-TextInput--andromeda k-Form-TextInput--regular"
    disabled={false}
    name="text"
  />
  <button
    className="sc-ifAKCX gmGUyD"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with component inside button value matches with snapshot 1`] = `
<div
  className="sc-htpNat ePpdXQ"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput sc-bxivhb wFwRO k-Form-TextInput--andromeda k-Form-TextInput--regular"
    disabled={false}
    name="text"
    placeholder="Les props sont transmises"
  />
  <button
    className="sc-ifAKCX gmGUyD"
    disabled={false}
    type="button"
  >
    <div
      className="sc-EHOje jccPYr k-Loader"
    >
      <svg
        className="k-Loader__circle"
        fill="#222"
        viewBox="0 0 5 5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={2.5}
          cy={2.5}
          r={5}
        />
      </svg>
      <svg
        className="k-Loader__circle"
        fill="#222"
        viewBox="0 0 5 5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={2.5}
          cy={2.5}
          r={5}
        />
      </svg>
      <svg
        className="k-Loader__circle"
        fill="#222"
        viewBox="0 0 5 5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={2.5}
          cy={2.5}
          r={5}
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`<TextInputWithButton /> with disabled prop matches with snapshot 1`] = `
<div
  className="sc-htpNat ePpdXQ"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput sc-bxivhb wFwRO k-Form-TextInput--andromeda k-Form-TextInput--disabled k-Form-TextInput--regular"
    disabled={true}
    name="text"
  />
  <button
    className="sc-ifAKCX fFKGd"
    disabled={true}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with error prop matches with snapshot 1`] = `
<div
  className="sc-htpNat ePpdXQ"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput sc-bxivhb wFwRO k-Form-TextInput--andromeda k-Form-TextInput--error k-Form-TextInput--regular"
    disabled={false}
    name="text"
  />
  <button
    className="sc-ifAKCX lfwjyn"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with giant prop matches with snapshot 1`] = `
<div
  className="sc-htpNat ePpdXQ"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput sc-bxivhb wFwRO k-Form-TextInput--andromeda k-Form-TextInput--regular k-Form-TextInput--giant"
    disabled={false}
    name="text"
  />
  <button
    className="sc-ifAKCX gmGUyD"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with huge prop matches with snapshot 1`] = `
<div
  className="sc-htpNat ePpdXQ"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput sc-bxivhb wFwRO k-Form-TextInput--andromeda k-Form-TextInput--regular k-Form-TextInput--huge"
    disabled={false}
    name="text"
  />
  <button
    className="sc-ifAKCX gmGUyD"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with props matches with snapshot 1`] = `
<div
  className="sc-htpNat ePpdXQ"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput sc-bxivhb wFwRO k-Form-TextInput--andromeda k-Form-TextInput--regular"
    disabled={false}
    name="text"
    placeholder="Les props sont transmises"
    value="foobar"
  />
  <button
    className="sc-ifAKCX gmGUyD"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with tiny prop matches with snapshot 1`] = `
<div
  className="sc-htpNat ePpdXQ"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput sc-bxivhb wFwRO k-Form-TextInput--andromeda k-Form-TextInput--tiny k-Form-TextInput--regular"
    disabled={false}
    name="text"
  />
  <button
    className="sc-ifAKCX gmGUyD"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with valid prop matches with snapshot 1`] = `
<div
  className="sc-htpNat ePpdXQ"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput sc-bxivhb wFwRO k-Form-TextInput--andromeda k-Form-TextInput--valid k-Form-TextInput--regular"
    disabled={false}
    name="text"
  />
  <button
    className="sc-ifAKCX UOJWq"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;
